--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
           <a class="nav-link" href="#universidades">Universidades
           </a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="contacto.html">Contacto
+          </a>
+        </li>
       </ul>
 
       <form id="siteSearchForm" class="d-flex">
@@ -640,8 +645,8 @@
         © 2026 PAUaPunto · Proyecto educativo DAW - Isabel Monzonís
       </small>
       <div class="d-flex gap-3">
-        <a href="#" class="footer-link small">Privacidad</a>
-        <a href="#" class="footer-link small">Aviso legal</a>
+        <a href="privacidad.html" class="footer-link small">Privacidad</a>
+        <a href="aviso-legal.html" class="footer-link small">Aviso legal</a>
         <a href="contacto.html" class="footer-link small">Contacto</a>
       </div>
     </div>
@@ -672,6 +677,15 @@
 <script src="js/main.js"></script>
 <!-- Bootstrap bundle -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
+<!-- Aviso cookies -->
+<div id="cookieBanner" class="cookie-banner">
+  <div class="container text-center">
+    <p class="mb-2">Este sitio utiliza cookies de terceros (como YouTube) para mostrar contenido incrustado. Puedes aceptarlas o rechazarlas.<a href="cookies.html">Más información</a></p>
+    <button id="acceptCookies" class="btn btn-primary btn-sm me-2">Aceptar</button>
+    <button id="rejectCookies" class="btn btn-outline-light btn-sm">Rechazar</button>
+  </div>
+</div>
 
 </body>
 </html>
