--- a/agenda.html
+++ b/agenda.html
@@ -63,6 +63,11 @@
           <a class="nav-link" href="index.html#universidades">Universidades
           </a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="contacto.html">Contacto
+          </a>
+        </li>
       </ul>
 
       <form id="siteSearchForm" class="d-flex">
@@ -420,8 +425,8 @@
         © 2026 PAUaPunto · Proyecto educativo DAW - Isabel Monzonís
       </small>
       <div class="d-flex gap-3">
-        <a href="#" class="footer-link small">Privacidad</a>
-        <a href="#" class="footer-link small">Aviso legal</a>
+        <a href="privacidad.html" class="footer-link small">Privacidad</a>
+        <a href="aviso-legal.html" class="footer-link small">Aviso legal</a>
         <a href="contacto.html" class="footer-link small">Contacto</a>
       </div>
     </div>
@@ -441,6 +446,15 @@
         <div class="list-group" id="searchResults"></div>
       </div>
     </div>
+  </div>
+</div>
+
+<!-- Aviso cookies -->
+<div id="cookieBanner" class="cookie-banner">
+  <div class="container text-center">
+    <p class="mb-2">Este sitio utiliza cookies de terceros (como YouTube) para mostrar contenido incrustado. Puedes aceptarlas o rechazarlas.<a href="cookies.html">Más información</a></p>
+    <button id="acceptCookies" class="btn btn-primary btn-sm me-2">Aceptar</button>
+    <button id="rejectCookies" class="btn btn-outline-light btn-sm">Rechazar</button>
   </div>
 </div>
 
