--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="icon" type="image/png" href="img/favicon.png">
-
     <title>PAU a Punto: home</title>
     <meta name="description" content="Prepárate para la PAU con los mejores recursos y exámenes resueltos en PAU a Punto.">
 
+    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="author" href="humans.txt">
     <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.8/dist/pulse/bootstrap.min.css" rel="stylesheet">
     <link href="css/estilos.css" rel="stylesheet">
 </head>
@@ -681,7 +680,7 @@
 <!-- Aviso cookies -->
 <div id="cookieBanner" class="cookie-banner">
   <div class="container text-center">
-    <p class="mb-2">Este sitio utiliza cookies de terceros (como YouTube) para mostrar contenido incrustado. Puedes aceptarlas o rechazarlas.<a href="cookies.html">Más información</a></p>
+    <p class="mb-2">Este sitio utiliza cookies de terceros (como YouTube) para mostrar contenido incrustado. Puedes aceptarlas o rechazarlas.<a href="cookies.html"> Más información</a></p>
     <button id="acceptCookies" class="btn btn-primary btn-sm me-2">Aceptar</button>
     <button id="rejectCookies" class="btn btn-outline-light btn-sm">Rechazar</button>
   </div>
