13/02/2026 - retoques para mejorar contraste visual

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <a class="nav-link" href="#calculadora">Calculadora PAU
           </a>
         </li>
+        
         <li class="nav-item">
           <a class="nav-link" href="#modelos">Exámenes</a>
         </li>
@@ -93,7 +94,7 @@
 
       <div class="col-12 col-sm-6 col-md-4">
           <a href="agenda.html" class="text-decoration-none text-reset">
-          <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
+          <div class="card mb-3 mx-auto card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Agenda PAU 2026</div>
               <div class="card-body">
                   <h3 class="card-title">PAU sin "caos"</h3>
@@ -106,7 +107,7 @@
 
       <div class="col-12 col-sm-6 col-md-4">
           <a href="#calculadora" class="text-decoration-none text-reset">
-          <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
+          <div class="card mb-3 mx-auto card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Calculadora PAU</div>
               <div class="card-body">
                   <h3 class="card-title">Conoce tu nota</h3>
@@ -118,7 +119,7 @@
 
       <div class="col-12 col-sm-6 col-md-4">
           <a href="#modelos" class="text-decoration-none text-reset">
-          <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
+          <div class="card mb-3 mx-auto card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Exámenes</div>
               <div class="card-body">
                   <h3 class="card-title">Practica con modelos</h3>
@@ -130,7 +131,7 @@
 
       <div class="col-12 col-sm-6 col-md-4">
           <a href="tecnicas.html" class="text-decoration-none text-reset">
-          <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
+          <div class="card mb-3 mx-auto card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Prepárate</div>
               <div class="card-body">
                   <h3 class="card-title">Estudia con cabeza</h3>
@@ -142,7 +143,7 @@
 
       <div class="col-12 col-sm-6 col-md-4">
           <a href="tecnicas.html#alimentacion" class="text-decoration-none text-reset">
-          <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
+          <div class="card mb-3 mx-auto card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Hábitos poderosos</div>
               <div class="card-body">
                   <h3 class="card-title">Mejora tu rendimiento</h3>
@@ -154,7 +155,7 @@
 
       <div class="col-12 col-sm-6 col-md-4">
           <a href="#universidades" class="text-decoration-none text-reset">
-          <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
+          <div class="card mb-3 mx-auto card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Universidades</div>
               <div class="card-body">
                   <h3 class="card-title">Explora universidades</h3>
