--- a/contacto.html
+++ b/contacto.html
@@ -99,13 +99,13 @@
       <div class="row justify-content-center">
           <div class="col-md-8">
               <div class="text-center">
-                  <h1 class="h1 fw-bold resaltado my-4">O contáctanos mediante el formulario web</h1>
+                  <h2 class="h1 fw-bold resaltado my-4">O contáctanos mediante el formulario web</h2>
               </div>
 
               <div class="contacto card border-0 mb-3 rounded-3 shadow">
                   <div class="card-body fs-6">
                       <p class="mt-3 mb-5 fw-bold">Puedes enviarnos tus dudas, te las resolveremos en el menor plazo posible.</p>
-                      <form action="mailto:mh92@.isabel@gmail.com" method="POST">
+                      <form action="mailto:mh92.isabel@gmail.com" method="POST">
                           
                           <div class="mb-3">
                               <label for="nombre" class="form-label">Nombre *</label>
